[CodeCompletion] Make sure to not pre-check an expression a second time in fallback completion

We could end up in cases where the same expression was prechecked twice during code completion – once for solver based completion and once for fallback compleiton. This caused a crash because pre-checking the same expression twice is not supported.

Record the expressions that were pre-checked during solver-based compleiton and make sure that we don't precheck them again.

Fixes rdar://79136653 [SR-14755]